# Utils

./: .clang-format  .gitignore  .gitmodules  AutoFetch.cpp  AutoFetch.h  AutoWaitCursor.cpp  AutoWaitCursor.h  BIFFile.cpp  BIFFile.h  BIFModel.cpp  BIFModel.h  BIFScrollBar.cpp  BIFScrollBar.h  BIFWidget.cpp  BIFWidget.h  BIFWidget.ui  BackgroundFileCheck.cpp  BackgroundFileCheck.h  BackupFile.cpp  BackupFile.h  ButtonEnabler.cpp  ButtonEnabler.h  CMakeLists.txt  CantorHash.h  CheckForLatestVersion.tgz  CollapsableGroupBox.cpp  CollapsableGroupBox.h  CompilerSettings.cmake  ConsoleUtils.cpp  ConsoleUtils.h  DelayComboBox.cpp  DelayComboBox.h  DelayLineEdit.cpp  DelayLineEdit.h  DelaySpinBox.cpp  DelaySpinBox.h  DoubleProgressDlg.cpp  DoubleProgressDlg.h  DownloadFile.cpp  DownloadFile.h  (+128 more)
BIFPlayerResources/: BIFPlayerResources.qrc
CheckForLatest/tmp/: CheckForLatest.cpp
MKVReader/: CMakeLists.txt  EBML.h  MKVReader.cpp  MKVReader.h  ebml.cpp  ids.h  include.cmake
MediaInfo/: libmediainfo_21.09_AllInclusive.7z
MediaInfo/MediaInfoLib/Project/CMake/: CMakeLists.txt
MediaInfo/MediaInfoLib/Source/Install/: MediaInfo_DLL_Windows_i386.nsi  MediaInfo_DLL_Windows_x64.nsi
MediaInfo/MediaInfoLib/Source/MediaInfo/: File__Analyze.cpp  MediaInfo_Config.cpp  MediaInfo_Config.h  MediaInfo_Config_MediaInfo.cpp  MediaInfo_File.cpp  MediaInfo_Inform.cpp  MediaInfo_Internal.cpp  Setup.h
MediaInfo/MediaInfoLib/Source/MediaInfo/Audio/: File_Ac4.cpp  File_Adm.h  File_DolbyE.cpp
MediaInfo/MediaInfoLib/Source/MediaInfo/Multiple/: File_DvDif_Analysis.cpp  File_Mpeg4_Elements.cpp  File_MpegPs.cpp  File_Mxf.cpp  File_Mxf.h  File_Riff.cpp  File_Riff_Elements.cpp
MediaInfo/MediaInfoLib/Source/MediaInfo/Video/: File_Avc.cpp  File_Hevc.cpp  File_Hevc.h
MediaInfo/MediaInfoLib/Source/Resource/Text/Language/: DefaultLanguage.csv
MediaInfo/MediaInfoLib/Source/Resource/Text/Stream/: Video.csv
MediaInfo/ProjectFiles/MediaInfoLib/: CMakeLists.txt
MediaInfo/ProjectFiles/ZenLib/Project/CMake/: CMakeLists.txt
MediaInfo/ProjectFiles/zlib/: CMakeLists.txt
MediaInfo/ZenLib/Project/CMake/: CMakeLists.txt
MediaInfo/zlib/: CMakeLists.txt
MediaInfo/zlib/contrib/BCB/: zlib.cbproj  zlib_Proj.groupproj
MediaInfo/zlib/contrib/vstudio/vc10/: miniunz.vcxproj  minizip.vcxproj  testzlib.vcxproj  testzlibdll.vcxproj  zlibstat.vcxproj  zlibvc.vcxproj
MediaInfo/zlib/contrib/vstudio/vc11/: miniunz.vcxproj  minizip.vcxproj  testzlib.vcxproj  testzlibdll.vcxproj  zlibstat.vcxproj  zlibvc.vcxproj
MediaInfo/zlib/contrib/vstudio/vc12/: miniunz.vcxproj  minizip.vcxproj  testzlib.vcxproj  testzlibdll.vcxproj  zlibstat.vcxproj  zlibvc.sln  zlibvc.vcxproj
MediaInfo/zlib/contrib/vstudio/vc14/: miniunz.vcxproj  minizip.vcxproj  testzlib.vcxproj  testzlibdll.vcxproj  zlibstat.vcxproj  zlibvc.sln  zlibvc.vcxproj
MediaInfo/zlib/contrib/vstudio/vc15/: miniunz.vcxproj  minizip.vcxproj  testzlib.vcxproj  testzlibdll.vcxproj  zlibstat.vcxproj  zlibuwp.vcxproj  zlibvc.sln  zlibvc.vcxproj
MediaInfo/zlib/contrib/vstudio/vc16/: miniunz.vcxproj  minizip.vcxproj  testzlib.vcxproj  testzlibdll.vcxproj  zlibstat.vcxproj  zlibvc.sln  zlibvc.vcxproj
Modules/: EnableGoogleTesting.cmake  FindAddUnitTest.cmake  FindCheckOpenSSL.cmake  FindCreateVersion.cmake  FindDeploy.cmake  FindGit.cmake  FindIncludeProjectSettings.cmake  FindInstallFile.cmake  FindQt5SrcMoc.cmake  FindQt6SrcMoc.cmake  FindSubverion.cmake  FindVerifyVisualStudio.cmake  FindVersion.cmake  InstallFile.cmake  Version.h.in  VersionInfo.cmake.in  vcxproj.unittest.user.in
QtDebugTools/OnShoreCSDbgEE/: OnShoreCSDbgEE.cpp  OnShoreCSDbgEE.sln  OnShoreCSDbgEE.vcproj
QtUnitTests/: CMakeLists.txt  TestFlowWidget.cpp  include.cmake
UnitTests/: CMakeLists.txt  Test.cpp  TestCantorHash.cpp
bif/: BIFIOHandler.cpp  BIFIOHandler.h  BIFPlugin.cpp  BIFPlugin.h  CMakeLists.txt  bif.json  include.cmake
gif/: .gitignore  CMakeLists.txt  GIFIOHandler.cpp  GIFIOHandler.h  GIFPlugin.cpp  GIFPlugin.h  include.cmake
resources/: BlankMKVTags.xml  SABUtils.qrc
